# salt-firmware

./: .project  CMakeLists.txt  README.md  data  ftdi_lpc4337.cfg
dimba/: main.c
dimba/anIn/: anIn.h
dimba/arch/ciaa-nxp/bsp/: anIn.c  bsp.c
dimba/arch/win/bsp/: anin.c  bsp.c
salt/: bsp.h  main.c  rkhcfg.h  saltCfg.h  signals.h
salt/aes/: aes.c  aes.h
salt/anIn/: anIn.h
salt/arch/edu-ciaa-nxp/bsp/: anIn.c  as1116.c  bsp.c  buzzer.c  hook.c  onSwitch.c  pulseCounter.c  relay.c  rtime.c  serial.c  sim808.c  trace_io.c
salt/conmgr/: conmgr.c  conmgr.h
salt/gps/: gps.h
salt/ihm/: buzzer.c  buzzer.h  onSwitch.h
salt/ledPanel/: as1116.h  ledPanel.c  ledPanel.h
salt/logic/: logic.c  logic.h
salt/mTime/: mTimeCfg.h  mTimeTbl.c
salt/modcmd/: modcmd.h  modcmdSim900.c
salt/modmgr/: modmgr.c  modmgr.h
salt/modpwr/: modpwr.c  modpwr.h
salt/mqttProt/: mqttProt.c  mqttProt.h
salt/parser/: jsmn.h
salt/parser/saltCmd/: saltCmd.c  saltCmd.h
salt/parser/sim900/: sim900parser.c  sim900parser.h
salt/publisher/: publisher.c
salt/pulseCounter/: pulseCounter.c  pulseCounter.h
salt/relayControl/: relay.c  relay.h
salt/serial/: serial.h
salt/sim808/: sim808.h
salt/teloc/: teloc.c  teloc.h
ssp_back/: ssp.c  ssp.h
